# DoIT-Android

./: CMakeLists.txt  ColorChooseDialog.qml  README.md  SimpleDialog.qml  ToDoList.qml  main.cpp  main.qml  qml.qrc  todolistviewmodel.cpp  todolistviewmodel.h  todomodel.cpp  todomodel.h
android/: AndroidManifest.xml  build.gradle
android/res/xml/: filepaths.xml
android/src/org/qtproject/example/activityhandler/: AlertDialogComponent.java  FilePathResolver.java  ShareComponent.java
qml/: AddFromTextDialog.qml  ColorChooseDialog.qml  SimpleDialog.qml  ToDoList.qml  main.qml  qml.qrc
src/: main.cpp  task.h  todolistviewmodel.cpp  todolistviewmodel.h  todomodel.cpp  todomodel.h
